# data-h195

./: .gitignore  Preliminary Prospectus.docx  advisor agreement.docx  readme.md  reproducibility_writeup.docx
analysis/: Labs_Feedback.ipynb  Proj3Checkpoint2.ipynb  labs_textbook_feedback.csv
creating_package/: pyproject.toml  readme.md
creating_package/.ipynb_checkpoints/: pyproject-checkpoint.toml
creating_package/src/stata2python/: funcs.py
creating_package/src/stata2python/.ipynb_checkpoints/: funcs-checkpoint.py
defining_funcs/: econ140_psets.ipynb  funcs.py  old_approach.ipynb
defining_funcs/.ipynb_checkpoints/: econ140_psets-checkpoint.ipynb
packaging_tutorial/: pyproject.toml
packaging_tutorial/src/numero_dos/: add.py
testing_stuff/: Untitled.ipynb  defining_funcs.ipynb  econ140_pset1.ipynb  econ140_psets.ipynb  funcs.py  pset1.py
testing_stuff/.ipynb_checkpoints/: defining_funcs-checkpoint.ipynb  econ140_pset1-checkpoint.ipynb  econ140_psets-checkpoint.ipynb  funcs-checkpoint.py
textbook/: _toc.yml  references.bib
textbook/.ipynb_checkpoints/: _config-checkpoint.yml  _toc-checkpoint.yml
textbook/_build/.doctrees/: README.doctree  environment.pickle
textbook/_build/.doctrees/content/: LICENSE.doctree  intro.doctree  references.doctree
textbook/_build/html/: .buildinfo  README.html  genindex.html  objects.inv  search.html  searchindex.js
textbook/_build/html/content/: LICENSE.html  intro.html  references.html
textbook/content/.ipynb_checkpoints/: intro-checkpoint.md
textbook/content/01-python_v_stata/: data_differences.md  differences.md  index.md  install.md  syntax.md
textbook/content/02-pandas/.ipynb_checkpoints/: index-checkpoint.md
textbook/content/02-prereqs/: index.md
textbook/content/02-prereqs/.ipynb_checkpoints/: numpy-checkpoint.ipynb  (+1 more)
textbook/content/03-pandas/: index.md  loading-looking.ipynb  merge.ipynb  misc_funcs.ipynb  select_modify.ipynb
textbook/content/04-regex/: regex.ipynb
textbook/content/04-visualizations/: advanced.ipynb  choosing.ipynb  figure_1.html  index.md  plot.html  types.ipynb
textbook/content/05-regex/: index.md
textbook/content/06-api/: api.ipynb
textbook/content/07-sql/: index.md  sql.ipynb
textbook/content/08-regression/: index.md
textbook/content/08-teachers-perspective/: index.md
textbook/content/09-web-scraping/: index.md
textbook1/: _config.yml  _toc.yml
(+299 files in other folders)
