[build-system]
requires = ["hatchling","pandas","numpy","matplotlib","statsmodels","scipy"]
build-backend = "hatchling.build"

[project]
name = "stata2python"
version = "0.0.1"
authors = [
  { name="Rohan Jha", email="rohan.jha@berkeley.edu" },
]
description = "Takes in Stata commands and outputs their Python equivalent"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "statsmodels",
  "scipy",
]

[project.urls]
"Repository" = "https://github.com/rohanjha123/data-h195/blob/main/defining_funcs/funcs.py"
"Bug Tracker" = "https://github.com/rohanjha123/data-h195/issues"