[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stata2python"
version = "0.0.4"
authors = [
  { name="Rohan Jha", email="rohan.jha@berkeley.edu" },
]
description = "Takes in Stata commands and outputs their Python equivalent"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
  "pandas",
]

[project.urls]
Repository = "https://github.com/rohanjha123/data-h195/tree/main/creating_package"
Functions = "https://github.com/rohanjha123/data-h195/blob/main/creating_package/src/stata2python/funcs.py"
Issues = "https://github.com/rohanjha123/data-h195/issues"