[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numero_dos"
version = "0.0.2"
authors = [
  { name="Rohan Jha", email="rohan.jha@berkeley.edu" },
]
description = "A small example package - it adds one"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"